# project-echo

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  COMMERCIAL_LICENSE.md  LICENSE  Makefile  PROGRESS.md  README.md  clean_reqs.txt  hidden_lockin.py  kpi_quick.json  kpi_quick.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_sentinel.py  server.js  toxic_reqs.txt
assets/: flying_pig_anim.py
docs/: BENCHMARK_RESULTS.md  DEMO_C.md  DEMO_SHOPPING.md  DEVICE_BOUNDARY.md  ED25519_MIGRATION.md  ED25519_OPERATIONAL.md  GROK-COLLABORATION-BIBLE.md  OPERATING_PROCEDURE.md  PROJECT_COMPLETION_ASSESSMENT.md  PUBLIC_AUDIT_FORMAT.md  README.md  THREAT_MODEL_UPDATE.md  VERIFICATION_DESIGN.md  XAI_PRESENTATION.md  demo_c_example.py  openai_world_register_threat.md  operations.md  status.md  threat_model.md
examples/: recommendations_biased.json  recommendations_clean.json
prompts/: 01_code_generation.md  02_proofreading.md  03_image_generation.md  04_data_analysis.md  05_chatbot.md  06_translation.md  07_summarization.md  08_creative_writing.md  README.md
reports/: 20260112_042613_Mars_Terraforming.md  20260419_forgeroot_tech_audit.md  20260423_web_security_audit.md  latest.md
scripts/: audit_key_registry.py  check_kpi_alert.py  ci_kpi_quick_check.py  dispatch_alert_notification.py  export_public_audit.py  make_xai_gift.py  monthly_gift_rehearsal.py  p2_integrated_summary.py  policy_lab.py  run_property_profile.py  send_webhook_alert.py  validate_traceability.py  verify_public_audit_integrity.py  verify_public_manifest.py  weekly_audit_archive.py
tests/: conftest.py  invariant_logging.py  strategies_adversarial.py  test_alert_notify.py  test_badge_cli.py  test_ci_kpi.py  test_cli_support.py  test_demo_c_example.py  test_demo_web_config.py  test_device_cli.py  test_diversity.py  test_diversity_config_thresholds.py  test_ear_handshake_security.py  test_echo_mark.py  test_echo_mark_registry.py  test_echo_mark_signing_contract.py  test_examples_smoke.py  test_gift_rehearsal_history_index.py  test_gift_rehearsal_manifest.py  test_greet.py  test_gumdrop_defense_signing.py  test_hardware_audit_log.py  test_integrity_jobs.py  test_invariants.py  test_kpi_alert_check.py  test_merkle_log.py  test_monthly_gift_rehearsal_script.py  test_ops_summary.py  test_policy_v1_compat.py  test_prop_alert_notify.py  test_prop_audit_archive.py  test_prop_ci_kpi.py  test_prop_device_boundary.py  test_prop_diversity.py  test_prop_echo_mark.py  (+28 more)
tools/: demo_web.py  (+6 more)
(+117 files in other folders)
