[project]
name = "project-echo"
version = "0.2.0"
description = "Responsible AI Development Framework with 39 Philosophers and Cosmic Ethics"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}

authors = [
    {name = "hiroshitanaka-creator"}
]

dependencies = [
    "pynacl>=1.5.0,<2.0.0",
]

[project.scripts]
po-cosmic = "po_cosmic.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.4.0", "hypothesis>=6.100.0", "mypy>=1.10.0"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["examples", "runs", "reports", "bin", "hidden_lockin.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "E402"]

[tool.ruff.lint.per-file-ignores]
"src/po_core/philosophers/*.py" = ["F841"]
"src/po_core/philosophers/**/*.py" = ["F841"]

[tool.ruff.format]
quote-style = "double"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = ["src", "."]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["examples", "runs", "reports", "bin", "tests"]

[[tool.mypy.overrides]]
module = "po_core.philosophers.*"
disallow_untyped_defs = false

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
